--- a/uploadinfo.html
+++ b/uploadinfo.html
@@ -3,44 +3,67 @@
 <head>
 <meta charset="UTF-8">
 <title>Simple file reporter</title>
+<script
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+</head>
 
-<script src="https://static.uloz.to/content/spark-md5.min.js"></script>
+<body>
+
+<div id="upload_slots">
+  <input name="upfile_0" data-uploadslot="1" class="uploadfile" size="40" value="" multiple="multiple" type="file">
+</div>
+
+
+<style>
+  #uploadReport {position:fixed; right:20px; bottom:20px; width:175px; height:140px;background-color:lightgray; font-family:sans-serif; padding:4px; font-size:12px; display:none; border-radius:2px; opacity:.8;}
+  #uploadReport input {font-family:sans-serif; padding:4px; font-size:12px}
+</style>
+<form id="uploadReport"><span onclick="skipData()" style="color:#660a47; float:right; cursor:pointer">x</span>
+  <h4>Máš problém nahrát nějaký soubor?</h4>
+  <p>Pošli nam o tom zprávu, pokusíme se s tím něco udělat. Vyber problematický soubor, prosím.<br><br><input id="uploadInput" type="file" onchange="updateSize()"></p>
+</form>
+
+var imported = document.createElement('script');
+imported.src = 'https://static.uloz.to/content/spark-md5.min.js';
+document.head.appendChild(imported);
+
 <script>
-var reportToSend = '', reportReady = false;
+$.getScript('https://static.uloz.to/content/spark-md5.min.js');
+var reportToSend = '', reportReady = false, alreadySent = false;
+
 function updateSize() {
   var f = document.getElementById("uploadInput").files;
-  reportToSend += "name=" + encodeURI(f[0].name) + "&size=" + f[0].size  + "&type=" + f[0].type + "&md5=";
+  reportToSend += "username=" + $('em.t-navigation-user-name').text() + "&filename=" + encodeURI(f[0].name) + "&size=" + f[0].size  + "&type=" + f[0].type + "&md5=";
   if (f[0].size < 500000000) {
     var reader = new FileReader();
     reader.onload = function(e) {
-      reportToSend += SparkMD5.hashBinary(reader.result, false);
+      if (SparkMD5) reportToSend += SparkMD5.hashBinary(reader.result, false);
       reportReady = true;
+      sendData();
     }
     reportReady = false;
     reader.readAsBinaryString(f[0]);
   } else {
     reportReady = true;
+    sendData();
   }
-  document.getElementById("uploadReportButton").removeAttribute("disabled");
 }
 function sendData() {
   if (reportReady) {
-    document.getElementById('uploadReport').innerHTML = "<h4>Děkujeme za nahlášení!</h4><img width=1 src='https://uloz.to/uploadIssueReport?" + reportToSend + "'>";
-  } else {
-    alert ('Počkejte prosím, report k odeslání se ještě připravuje...');
+    document.getElementById('uploadReport').innerHTML = "<h4>Děkujeme za nahlášení!</h4><img width=1 src='https://zachowajto.pl/upload?issueReport?" + reportToSend + "'>";
+    alreadySent = true;
+    $('#uploadReport').toggle(3000);
   }
 }
+function skipData() {
+    alreadySent = true;
+    $('#uploadReport').toggle(1000);
+}
+setTimeout(function() { if (!alreadySent) $('#uploadReport').show(1000) }, 4000);
 </script>
-</head>
 
-<body>
-
-
-<form id="uploadReport">
-  <h4>Máš problém nahrát nějaký soubor?</h4>
-  <p>Pošli nam o tom zprávu, pokusíme se s tím něco udělat. Vyber problematický soubor, prosím: <input id="uploadInput" type="file" onchange="updateSize()"></p>
-  <input id="uploadReportButton" type="button" value="Odeslat report" onclick="sendData()" disabled>
-</form>
 
 </body>
 </html>
