Cloud generator hacked plus first version of reporter tool...

--- a/wcg/wcg.html
+++ b/wcg/wcg.html
@@ -38,8 +38,8 @@ a.active { text-decoration: none; color: #000; font-weight: bold; cursor: text; 
   <div id="presets"></div>
   <div id="custom-area">
     <p><textarea id="text">
-uloz.to;www.uloz.to;www.uloz.to;www.uloz.to;www.uloz.to;ulozto.cz;www.ulozto.cz;ulozto.sk;ulozto.sk;www.ulozto.sk;ulozto.net;www.ulozto.net;ulozto.pl;www.ulozto.pl;zachowajto.pl;www.zachowajto.pl;
-rychlé stahování;rychlé stahování;pomalé stahování;kredit;kredit;credit;LIVE;LIVE;video;video;video;audio;audio;audio;archivy;archivy;dokumenty;dokumenty a četba;dokumenty a četba;obrázky;fotky;fotky;foto;foto;prezentace;prezentace;vyhledat;vyhledat;stáhnout;stáhnout;nahrát;nahrát;dobít;darovat;
+uloz.to;uloz.to;uloz.to;uloz.to;uloz.to;uloz.to;uloz.to;www.uloz.to;ulozto.cz;www.ulozto.cz;ulozto.sk;ulozto.sk;www.ulozto.sk;ulozto.net;www.ulozto.net;ulozto.pl;www.ulozto.pl;zachowajto.pl;www.zachowajto.pl;
+rychlé stahování;rychlé stahování;pomalé stahování;kredit;kredit;credit;LIVE;LIVE;video;video;video;video;video;audio;audio;audio;archivy;archivy;dokumenty;dokumenty a četba;dokumenty a četba;obrázky;fotky;fotky;foto;foto;foto;foto;prezentace;prezentace;vyhledat;vyhledat;stáhnout;stáhnout;nahrát;nahrát;dobít;darovat;
 vivala;titul.in;titul.in;31s;partnerské programy;aplikace;aplikace;android;android;iOS;iOS;windows;windows;linux;macOS;cloudová kancelář;
 neomezená data;neomezená data;české uložiště;české uložiště;rychlost;data;rychlost;data;rychlá data;vzpomínky;zážitky z dovolené;
 sdílení;soukromí;cloud;cloud;pro veřejnost;přes odkaz;jenpro mě;CreditBack;CreditBack;web;internet;síť;pošta;statistiky;moje soubory;oblíbené;soubory;soubory;výplaty;přihlášení;miliony souborů;ochrana dat;hesla;
@@ -69,7 +69,7 @@ bezpečnost;česká služba;parametry;fotogalerie;komentáře;dostupnost;streami
     <label for="scale-log"><input name="scale" id="scale-log" value="log" checked="checked" type="radio"> log n</label>
     <label for="scale-sqrt"><input name="scale" id="scale-sqrt" value="sqrt" type="radio"> √n</label>
     <label for="scale-linear"><input name="scale" id="scale-linear" value="linear" type="radio"> n</label>
-  </p><p><label for="font">Font:</label> <input id="font" value="Impact" type="text">
+  </p><p><label for="font">Font:</label> <input id="font" value="Open Sans" type="text">
 </p></div>
 
 <div id="angles">
