Hiring banner modified + added push based local files nudity detection chcker

--- a/hiring-ut-banner/banner3.htm
+++ b/hiring-ut-banner/banner3.htm
@@ -23,14 +23,15 @@
       overflow: hidden;
     }
     h1 {
-    	margin: 108px 0 0 0;
-      height: 81px;
-    	font-size: 30px;
+    	margin: 125px 0 0 0;
+      height: 80px;
+    	font-size: 31px;
     	color: white;
     	padding: 5px 3px;
     	text-align: center;
     	line-height: 124%;
     	border-top: 1px solid darkgray;
+      letter-spacing: normal;
     	text-shadow: 2px 2px 1px rgb(3, 3, 3);
     	background-image: linear-gradient(to top, #480633, #B60F81);
     	background-color: rgb(30,87,153); /* Old browsers */
@@ -43,6 +44,10 @@
     }
     h1 a {
       text-decoration: none;
+    }
+    h1 a:hover {
+      color: white;
+      text-shadow: 2px 2px 2px navy;
     }
     ul {
       margin-top: 4px;
@@ -58,6 +63,7 @@
     a {
     	color: white;
       text-shadow: .5px .5px 1px #000, -.5px -.5px 1px #000, .5px -.5px 1px #000, -.5px .5px 1px #000;
+      text-decoration: none;
     }
     a:hover{
       color: rgb(125,185,232);
@@ -68,14 +74,14 @@
 <body>
   <div id="prace">
   	<ul>
-      <li><a href="https://uloz.to/kariera#carrier-mkt" target="_top">Specialista marketingu</a></li>
+      <!--li><a href="https://uloz.to/kariera#carrier-mkt" target="_top">Specialista marketingu</a></li-->
       <li><a href="https://uloz.to/kariera#carrier-produkt" target="_top">Produktový manažer</a></li>
       <li><a href="https://uloz.to/kariera#carrier-linux-senior" target="_top">Linux administrátor</a></li>
       <li><a href="https://uloz.to/kariera#carrier-javascript" target="_top">JavaScript vývojář</a>
       <li><a href="https://uloz.to/kariera#carrier-cdn" target="_top">Python vývojář</a></li>
       <li><a href="https://uloz.to/kariera#carrier-php" target="_top">PHP vývojář</a></li>
   	</ul>
-    <h1><a href="https://uloz.to/kariera" target="_top">Nechceš zažít<br>něco nového?</a></h1>
+    <h1><a href="https://uloz.to/kariera" target="_top">Chceš zažít<br>něco nového?</a></h1>
   </div>
 </body>
 </html>
