--- a/hiring-ut-banner/nabor-leader.htm
+++ b/hiring-ut-banner/nabor-leader.htm
@@ -40,8 +40,8 @@
     }
     li {
     	text-align: left;
-    	line-height: 120%;
-    	font-size: 12px;
+    	line-height: 150%;
+    	font-size: 13px;
       list-style-type: square;
     }
     a {
@@ -64,12 +64,13 @@
   <div id="prace">
   	<h2>Pracuj pro <a href="https://uloz.to/kariera" style="text-decoration: none;"><span class="fil">Ulož.to</span></a>:</h2>
   	<ul>
-      <li><a href="https://uloz.to/kariera#carrier-linux" target="_top">IT Operations Teamleader</a>
-      <li><a href="https://uloz.to/kariera#carrier-produkt" target="_top">Produktový manažer</a>
-      <li><a href="https://uloz.to/kariera#carrier-cdn" target="_top">Python vývojář pro CDN</a>
+      <!--li><a href="https://uloz.to/kariera#carrier-linux" target="_top">IT Operations Teamleader</a>
       <li><a href="https://uloz.to/kariera#carrier-mkt" target="_top">Marketingový specialista</a>
+      <li><a href="https://uloz.to/kariera#carrier-produkt" target="_top">Produktový manažer</a-->
+      <li><a href="https://uloz.to/kariera#carrier-php" target="_top">PHP webový vývojář</a>
       <li><a href="https://uloz.to/kariera#carrier-linux-senior" target="_top">Linux administrátor</a>
-      <li><a href="https://uloz.to/kariera#carrier-php" target="_top">Webový vývojář v PHP/JS</a>
+      <li><a href="https://uloz.to/kariera#carrier-javascript" target="_top">JavaScript frontend vývojář</a>
+      <li><a href="https://uloz.to/kariera#carrier-cdn" target="_top">Python backend vývojář</a>
   	</ul>
   </div>
 </body>
